--- a/features/clip.yml
+++ b/features/clip.yml
@@ -3,6 +3,7 @@ description: The `clip` CSS property sets the visible area of an absolutely posi
 spec: https://drafts.fxtf.org/css-masking-1/#clip-property
 group: clipping-shapes-masking
 discouraged:
+  reason: The CSS Masking specification deprecated the `clip` property.
   according_to:
     - https://drafts.fxtf.org/css-masking-1/#clip-property
   alternatives:
