--- a/features/css-object-model-discouraged.yml
+++ b/features/css-object-model-discouraged.yml
@@ -3,6 +3,7 @@ description: The DOM level 2 style specification defined interfaces to access an
 spec: https://www.w3.org/TR/DOM-Level-2-Style/
 group: cssom
 discouraged:
+  reason: The DOM level 2 CSS object model was excluded from the later CSS object model (CSSOM) specification.
   according_to:
     - https://www.w3.org/TR/DOM-Level-2-Style/#Overview-status
   alternatives:
