--- a/features/arguments-callee.yml
+++ b/features/arguments-callee.yml
@@ -6,6 +6,7 @@ discouraged:
   # From note 4: "The definition of this property […] exists to ensure that it
   # is not defined in any other manner by conforming ECMAScript
   # implementations."
+  reason: JavaScript strict mode prohibits accessing `arguments.callee`.
   according_to:
     - https://tc39.es/ecma262/multipage/ordinary-and-exotic-objects-behaviours.html#sec-arguments-exotic-objects
 compat_features:
