--- a/features/color-contrast.yml
+++ b/features/color-contrast.yml
@@ -3,6 +3,7 @@ description: "The `color-contrast()` CSS function picks a color from a list that
 spec: https://drafts.csswg.org/css-color-5/#contrast-color
 group: color-types
 discouraged:
+  reason: The CSS Color specification renamed `color-contrast()` to `contrast-color()`.
   # See these CSSWG discussions
   # https://github.com/w3c/csswg-drafts/issues/7557
   # https://github.com/w3c/csswg-drafts/issues/7359
