--- a/features/date-get-year-set-year.yml
+++ b/features/date-get-year-set-year.yml
@@ -3,6 +3,7 @@ description: The `getYear()` and `setYear()` methods of `Date` objects get and s
 spec: https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-date.prototype.getyear
 group: javascript
 discouraged:
+  reason: The `getYear()` and `setYear()` methods use a truncated number instead of the actual year number, known as a year 2000 problem.
   according_to:
     - https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-additional-ecmascript-features-for-web-browsers
   # No `alternatives` because it would be `alternatives: [date]`. In the future
