Reflect cookie store spec move to WHATWG

--- a/features/cookie-store.yml
+++ b/features/cookie-store.yml
@@ -1,6 +1,6 @@
 name: Cookie store
 description: The `CookieStore` interface is an asynchronous and promise-based API for managing cookies. It does not rely on document and so is available to service workers as well.
-spec: https://wicg.github.io/cookie-store/
+spec: https://cookiestore.spec.whatwg.org/
 caniuse: cookie-store-api
 compat_features:
   - api.CookieStore
