--- a/features/dialog-closedby.yml.dist
+++ b/features/dialog-closedby.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "134"
     chrome_android: "134"
     edge: "134"
+    firefox: "141"
+    firefox_android: "141"
 compat_features:
   - api.HTMLDialogElement.closedBy
   - html.elements.dialog.closedby
