--- a/features/font-variant-emoji.yml.dist
+++ b/features/font-variant-emoji.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "131"
     chrome_android: "131"
     edge: "131"
+    firefox: "141"
+    firefox_android: "141"
 compat_features:
   - css.properties.font-variant-emoji
   - css.properties.font-variant-emoji.emoji
