--- a/features/pointer-events-api.yml.dist
+++ b/features/pointer-events-api.yml.dist
@@ -187,6 +187,8 @@ compat_features:
   #   chrome: "128"
   #   chrome_android: "128"
   #   edge: "128"
+  #   firefox: "141"
+  #   firefox_android: "141"
   - api.PointerEvent.persistentDeviceId
 
   # baseline: false
