--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -627,6 +627,30 @@ compat_features:
   #   safari_ios: "18"
   - html.elements.script.type.importmap.integrity
 
+  # baseline: low
+  # baseline_low_date: 2025-07-22
+  # support:
+  #   chrome: "116"
+  #   chrome_android: "116"
+  #   edge: "116"
+  #   firefox: "141"
+  #   firefox_android: "141"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.HTMLElement.togglePopover.force_parameter
+
+  # baseline: low
+  # baseline_low_date: 2025-07-22
+  # support:
+  #   chrome: "130"
+  #   chrome_android: "130"
+  #   edge: "130"
+  #   firefox: "141"
+  #   firefox_android: "141"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
+  - api.HTMLElement.togglePopover.options_force_parameter
+
   # baseline: false
   # support:
   #   chrome: "4"
@@ -747,24 +771,6 @@ compat_features:
   #   firefox: "123"
   #   firefox_android: "123"
   - http.status.103.preload
-
-  # baseline: false
-  # support:
-  #   chrome: "116"
-  #   chrome_android: "116"
-  #   edge: "116"
-  #   safari: "17"
-  #   safari_ios: "17"
-  - api.HTMLElement.togglePopover.force_parameter
-
-  # baseline: false
-  # support:
-  #   chrome: "130"
-  #   chrome_android: "130"
-  #   edge: "130"
-  #   safari: "18.4"
-  #   safari_ios: "18.4"
-  - api.HTMLElement.togglePopover.options_force_parameter
 
   # baseline: false
   # support:
