--- a/features/draft/spec/pointerlock-2.yml.dist
+++ b/features/draft/spec/pointerlock-2.yml.dist
@@ -23,9 +23,9 @@ compat_features:
   #   edge: "79"
   - api.Document.featurePolicy
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "88"
   #   edge: "88"
+  #   safari: "18.4"
   - api.Element.requestPointerLock.options_unadjustedMovement_parameter
