--- a/features/draft/spec/selection-api.yml.dist
+++ b/features/draft/spec/selection-api.yml.dist
@@ -3,7 +3,10 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "137"
+    chrome_android: "137"
+    edge: "137"
 compat_features:
   # baseline: high
   # baseline_low_date: 2018-04-30
@@ -54,7 +57,10 @@ compat_features:
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "137"
+  #   chrome_android: "137"
+  #   edge: "137"
   - api.Selection.collapse.accepts_nodes_in_shadow_trees
   - api.Selection.extend.accepts_nodes_in_shadow_trees
   - api.Selection.setBaseAndExtent.accepts_nodes_in_shadow_trees
