Override `abs-sign`
Possible blocker not recorded in BCD: https://bugzilla.mozilla.org/show_bug.cgi?id=1845298

--- a/features/abs-sign.yml
+++ b/features/abs-sign.yml
@@ -2,3 +2,11 @@ name: abs() and sign()
 description: The `abs()` and `sign()` CSS functions compute the absolute value or the sign of the input.
 spec: https://drafts.csswg.org/css-values-4/#sign-funcs
 group: css
+status:
+  baseline: false
+  support:
+    chrome: "138"
+    chrome_android: "138"
+    edge: "138"
+    safari: "15.4"
+    safari_ios: "15.4"
