--- a/features/related-apps.yml.dist
+++ b/features/related-apps.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome_android: "84"
+    edge: "85"
 compat_features:
   # baseline: false
   # support:
@@ -16,5 +17,6 @@ compat_features:
   # baseline: false
   # support:
   #   chrome_android: "44"
+  #   edge: "17"
   - manifests.webapp.prefer_related_applications
   - manifests.webapp.related_applications
