Further qualify regression comment

--- a/features/parse-html-unsafe.yml
+++ b/features/parse-html-unsafe.yml
@@ -3,6 +3,6 @@ description: The `Document.parseHTMLUnsafe()` static method parses HTML into a D
 spec: https://html.spec.whatwg.org/multipage/dynamic-markup-insertion.html#unsafe-html-parsing-methods
 # TODO: https://github.com/web-platform-dx/web-features/issues/1971
 # Status changed: https://github.com/web-platform-dx/web-features/pull/3200
-# 2025-08-06 - low → false - In Safari, if there are custom elements in the parsed HTML, then the elements' constructors and `connectedCallback()` methods are not called.
+# 2025-08-06 - low → false - In Safari, if there are custom elements in a declarative shadow root in the parsed HTML, then the elements' constructors and `connectedCallback()` methods are not called.
 # References:
 # - https://bugs.webkit.org/show_bug.cgi?id=296420
