Remove keys dropped from BCD

--- a/features/color-scheme.yml
+++ b/features/color-scheme.yml
@@ -12,8 +12,7 @@ group: css
 compat_features:
   - html.elements.meta.name.color-scheme
   - css.properties.color-scheme
-  - css.properties.color-scheme.only_dark
-  - css.properties.color-scheme.only_light
+  - css.properties.color-scheme.only
   - css.properties.color-scheme.dark
   - css.properties.color-scheme.light
   - css.properties.color-scheme.normal
