--- a/features/color-scheme.yml.dist
+++ b/features/color-scheme.yml.dist
@@ -55,5 +55,4 @@ compat_features:
   #   firefox_android: "96"
   #   safari: "13"
   #   safari_ios: "13"
-  - css.properties.color-scheme.only_dark
-  - css.properties.color-scheme.only_light
+  - css.properties.color-scheme.only
