--- a/features/draft/spec/webxr-depth-sensing-1.yml.dist
+++ b/features/draft/spec/webxr-depth-sensing-1.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "139"
+    chrome_android: "139"
 compat_features:
   - api.XRSession.depthActive
   - api.XRSession.depthType
