--- a/features/draft/spec/css-borders-4.yml.dist
+++ b/features/draft/spec/css-borders-4.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "139"
+    chrome_android: "139"
 compat_features:
   - css.properties.corner-block-end-shape
   - css.properties.corner-block-start-shape
