--- a/features/flexbox.yml.dist
+++ b/features/flexbox.yml.dist
@@ -120,6 +120,36 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
+  #   chrome: "29"
+  #   chrome_android: "29"
+  #   edge: "79"
+  #   firefox: "20"
+  #   firefox_android: "20"
+  #   safari: "9"
+  #   safari_ios: "9"
+  - css.properties.justify-content.left
+  - css.properties.justify-content.normal
+  - css.properties.justify-content.right
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "29"
+  #   chrome_android: "29"
+  #   edge: "79"
+  #   firefox: "28"
+  #   firefox_android: "28"
+  #   safari: "9"
+  #   safari_ios: "9"
+  - css.properties.align-self.auto
+  - css.properties.align-self.normal
+  - css.properties.align-self.stretch
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
   #   chrome: "36"
   #   chrome_android: "36"
   #   edge: "79"
@@ -128,6 +158,21 @@ compat_features:
   #   safari: "9"
   #   safari_ios: "9"
   - css.properties.align-self.flex_context.baseline
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "52"
+  #   chrome_android: "52"
+  #   edge: "79"
+  #   firefox: "20"
+  #   firefox_android: "20"
+  #   safari: "9"
+  #   safari_ios: "9"
+  - css.properties.justify-items.left
+  - css.properties.justify-items.legacy
+  - css.properties.justify-items.right
 
   # baseline: high
   # baseline_low_date: 2020-01-15
