--- a/features/grid.yml.dist
+++ b/features/grid.yml.dist
@@ -142,6 +142,23 @@ compat_features:
   #   chrome: "57"
   #   chrome_android: "57"
   #   edge: "79"
+  #   firefox: "45"
+  #   firefox_android: "45"
+  #   safari: "10.1"
+  #   safari_ios: "10.3"
+  - css.properties.justify-self.auto
+  - css.properties.justify-self.left
+  - css.properties.justify-self.normal
+  - css.properties.justify-self.right
+  - css.properties.justify-self.stretch
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "57"
+  #   chrome_android: "57"
+  #   edge: "79"
   #   firefox: "52"
   #   firefox_android: "52"
   #   safari: "10.1"
