--- a/features/speech-recognition-grammar.yml.dist
+++ b/features/speech-recognition-grammar.yml.dist
@@ -5,9 +5,10 @@ status:
   baseline: false
   support: {}
 compat_features:
-  - api.SpeechGrammar
-  - api.SpeechGrammar.src
-  - api.SpeechGrammar.weight
+  # baseline: false
+  # support:
+  #   chrome: "139"
+  #   chrome_android: "139"
   - api.SpeechGrammarList
   - api.SpeechGrammarList.SpeechGrammarList
   - api.SpeechGrammarList.addFromString
@@ -15,3 +16,10 @@ compat_features:
   - api.SpeechGrammarList.item
   - api.SpeechGrammarList.length
   - api.SpeechRecognition.grammars
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - api.SpeechGrammar
+  - api.SpeechGrammar.src
+  - api.SpeechGrammar.weight
