--- a/features/reporting.yml.dist
+++ b/features/reporting.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "96"
     chrome_android: "96"
     edge: "96"
+    safari: "16.4"
+    safari_ios: "16.4"
 compat_features:
   # baseline: false
   # support:
@@ -21,6 +23,7 @@ compat_features:
   - api.ReportingObserver.observe
   - api.ReportingObserver.takeRecords
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "96"
