--- a/features/draft/spec/css-anchor-position-1.yml.dist
+++ b/features/draft/spec/css-anchor-position-1.yml.dist
@@ -3,15 +3,13 @@
 
 status:
   baseline: false
-  support:
-    chrome: "129"
-    chrome_android: "129"
-    edge: "129"
+  support: {}
 compat_features:
-  - css.properties.position-area.self-block-end
-  - css.properties.position-area.self-block-start
-  - css.properties.position-area.self-inline-end
-  - css.properties.position-area.self-inline-start
+  # baseline: false
+  # support:
+  #   chrome: "129"
+  #   chrome_android: "129"
+  #   edge: "129"
   - css.properties.position-area.span-self-block-end
   - css.properties.position-area.span-self-block-start
   - css.properties.position-area.span-self-end
@@ -22,3 +20,11 @@ compat_features:
   - css.properties.position-area.span-x-self-start
   - css.properties.position-area.span-y-self-end
   - css.properties.position-area.span-y-self-start
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - css.properties.position-area.self-block-end
+  - css.properties.position-area.self-block-start
+  - css.properties.position-area.self-inline-end
+  - css.properties.position-area.self-inline-start
