--- a/features/draft/spec/css-borders-4.yml.dist
+++ b/features/draft/spec/css-borders-4.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "139"
     chrome_android: "139"
+    edge: "139"
 compat_features:
   - css.properties.corner-block-end-shape
   - css.properties.corner-block-start-shape
