--- a/features/page-selectors.yml.dist
+++ b/features/page-selectors.yml.dist
@@ -10,8 +10,9 @@ status:
     safari: "6"
     safari_ios: "6"
 compat_features:
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-02-14
+  # baseline_high_date: 2025-08-14
   # support:
   #   chrome: "85"
   #   chrome_android: "85"
