--- a/features/private-network-access.yml.dist
+++ b/features/private-network-access.yml.dist
@@ -3,10 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "124"
-    chrome_android: "124"
-    edge: "124"
+  support: {}
 compat_features:
   - api.Request.targetAddressSpace
   - http.mixed-content.private_network_access
