--- a/features/speech-recognition-grammar.yml.dist
+++ b/features/speech-recognition-grammar.yml.dist
@@ -9,6 +9,7 @@ compat_features:
   # support:
   #   chrome: "139"
   #   chrome_android: "139"
+  #   edge: "139"
   - api.SpeechGrammarList
   - api.SpeechGrammarList.SpeechGrammarList
   - api.SpeechGrammarList.addFromString
