--- a/features/calc-constants.yml.dist
+++ b/features/calc-constants.yml.dist
@@ -39,8 +39,9 @@ compat_features:
   #   safari_ios: "15.4"
   - css.types.calc-keyword.pi
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-02-09
+  # baseline_high_date: 2025-08-09
   # support:
   #   chrome: "110"
   #   chrome_android: "110"
