--- a/features/css-object-model.yml.dist
+++ b/features/css-object-model.yml.dist
@@ -220,8 +220,9 @@ compat_features:
   - api.CSSConditionRule
   - api.CSSConditionRule.conditionText
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-02-14
+  # baseline_high_date: 2025-08-14
   # support:
   #   chrome: "1"
   #   chrome_android: "18"
