--- a/features/draft/spec/payment-request.yml.dist
+++ b/features/draft/spec/payment-request.yml.dist
@@ -6,5 +6,6 @@ status:
   support:
     chrome: "139"
     chrome_android: "139"
+    edge: "139"
 compat_features:
   - api.PaymentRequest.securePaymentConfirmationAvailability_static
