--- a/features/draft/spec/speech-api.yml.dist
+++ b/features/draft/spec/speech-api.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "139"
     chrome_android: "139"
+    edge: "139"
 compat_features:
   - api.SpeechRecognition.available_static
   - api.SpeechRecognition.install_static
