--- a/features/draft/spec/webxr-depth-sensing-1.yml.dist
+++ b/features/draft/spec/webxr-depth-sensing-1.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "139"
     chrome_android: "139"
+    edge: "139"
 compat_features:
   - api.XRSession.depthActive
   - api.XRSession.depthType
