--- a/features/font-variant.yml.dist
+++ b/features/font-variant.yml.dist
@@ -82,8 +82,9 @@ compat_features:
   #   safari_ios: "9.3"
   - css.properties.font-variant.css_fonts_shorthand
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-02-09
+  # baseline_high_date: 2025-08-09
   # support:
   #   chrome: "110"
   #   chrome_android: "110"
