--- a/features/media-capture.yml.dist
+++ b/features/media-capture.yml.dist
@@ -363,19 +363,6 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
-  #   chrome: "47"
-  #   chrome_android: "47"
-  #   edge: "79"
-  #   firefox: "39"
-  #   firefox_android: "39"
-  #   safari: "11"
-  #   safari_ios: "11"
-  - api.InputDeviceInfo
-
-  # baseline: high
-  # baseline_low_date: 2020-01-15
-  # baseline_high_date: 2022-07-15
-  # support:
   #   chrome: "53"
   #   chrome_android: "53"
   #   edge: "79"
@@ -501,6 +488,15 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.MediaStreamTrack.muted
+
+  # baseline: false
+  # support:
+  #   chrome: "47"
+  #   chrome_android: "47"
+  #   edge: "79"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.InputDeviceInfo
 
   # baseline: false
   # support:
