--- a/features/autofill.yml
+++ b/features/autofill.yml
@@ -2,3 +2,16 @@ name: ":autofill"
 description: "The `:autofill` pseudo-class matches `<input>` elements that have been filled in automatically by the browser."
 spec: https://html.spec.whatwg.org/multipage/semantics-other.html#selector-autofill
 group: forms
+status:
+  baseline: low
+  baseline_low_date: 2023-02-09
+  support:
+    chrome: "110"
+    chrome_android: "110"
+    edge: "110"
+    firefox: "86"
+    firefox_android: "86"
+    safari: "15"
+    safari_ios: "15"
+compat_features:
+  - css.selectors.autofill
