--- a/features/scroll-into-view.yml
+++ b/features/scroll-into-view.yml
@@ -3,3 +3,9 @@ description: The `scrollIntoView()` method scrolls an element's ancestor contain
 spec: https://drafts.csswg.org/cssom-view-1/#dom-element-scrollintoview
 caniuse: scrollintoview
 group: scrolling
+status:
+  compute_from: api.Element.scrollIntoView
+compat_features:
+  - api.Element.scrollIntoView
+  - api.Element.scrollIntoView.options_container_parameter
+  - api.Element.scrollIntoView.options_parameter
