--- a/features/local-network-access.yml.dist
+++ b/features/local-network-access.yml.dist
@@ -3,9 +3,6 @@
 
 status:
   baseline: false
-  support:
-    chrome: "124"
-    chrome_android: "124"
-    edge: "124"
+  support: {}
 compat_features:
   - api.Request.targetAddressSpace
