--- a/features/draft/spec/selection-api.yml.dist
+++ b/features/draft/spec/selection-api.yml.dist
@@ -50,17 +50,18 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "137"
+  #   chrome_android: "137"
+  #   edge: "137"
+  #   firefox: "142"
+  #   firefox_android: "142"
+  - api.Selection.collapse.accepts_nodes_in_shadow_trees
+  - api.Selection.extend.accepts_nodes_in_shadow_trees
+  - api.Selection.setBaseAndExtent.accepts_nodes_in_shadow_trees
+
+  # baseline: false
+  # support:
   #   chrome: "74"
   #   chrome_android: "74"
   #   edge: "79"
   - api.Document.featurePolicy
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   chrome: "137"
-  #   chrome_android: "137"
-  #   edge: "137"
-  - api.Selection.collapse.accepts_nodes_in_shadow_trees
-  - api.Selection.extend.accepts_nodes_in_shadow_trees
-  - api.Selection.setBaseAndExtent.accepts_nodes_in_shadow_trees
