--- a/features/draft/spec/web-animations-2.yml.dist
+++ b/features/draft/spec/web-animations-2.yml.dist
@@ -3,16 +3,22 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "142"
+    firefox_android: "142"
 compat_features:
   # baseline: false
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
   #   edge: "133"
+  #   firefox: "142"
+  #   firefox_android: "142"
   - api.Animation.overallProgress
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support: {}
+  # support:
+  #   firefox: "142"
+  #   firefox_android: "142"
   - api.Animation.commitStyles.endpoint_inclusive_commitStyles
