--- a/features/draft/spec/webrtc.yml.dist
+++ b/features/draft/spec/webrtc.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "119"
     chrome_android: "119"
     edge: "119"
+    firefox: "142"
+    firefox_android: "142"
 compat_features:
   - api.RTCRtpSender.setParameters.parameters_encodings_parameter.codec
