--- a/features/device-posture.yml
+++ b/features/device-posture.yml
@@ -1,3 +1,3 @@
 name: Device posture
-description: The device posture API and the `device-posture` CSS media feature provide information about the physical posture of a device, such as whether a foldable device is folded or unfolded.
+description: The device posture API and the `device-posture` CSS media feature reflect the physical posture of a device, such as whether a foldable device is folded or unfolded.
 spec: https://w3c.github.io/device-posture/
