--- a/features/open-closed.yml.dist
+++ b/features/open-closed.yml.dist
@@ -3,18 +3,11 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "133"
+    chrome_android: "133"
+    edge: "133"
+    firefox: "136"
+    firefox_android: "136"
 compat_features:
-  # baseline: false
-  # support:
-  #   chrome: "133"
-  #   chrome_android: "133"
-  #   edge: "133"
-  #   firefox: "136"
-  #   firefox_android: "136"
   - css.selectors.open
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support: {}
-  - css.selectors.closed
