--- a/features/interactivity.yml.dist
+++ b/features/interactivity.yml.dist
@@ -3,4 +3,10 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "135"
+    edge: "135"
+compat_features:
+  - css.properties.interactivity
+  - css.properties.interactivity.auto
+  - css.properties.interactivity.inert
