--- a/features/font-face.yml
+++ b/features/font-face.yml
@@ -1,6 +1,6 @@
 name: "@font-face"
 description: The `@font-face` CSS at-rule creates a custom `font-family` value. The at-rule's descriptors set the font's name, source, and various display settings.
-spec: https://drafts.csswg.org/css-fonts-5/
+spec: https://drafts.csswg.org/css-fonts-5/#font-face-rule
 group: fonts
 caniuse:
   - fontface
