--- a/features/ambient-light.yml
+++ b/features/ambient-light.yml
@@ -1,5 +1,5 @@
 name: Ambient light sensor
-description: The `AmbientLightSensor` interface returns the current light level in lux of the ambient light level around the device.
+description: The `AmbientLightSensor` API returns the current light level in lux of the ambient light level around the device.
 spec: https://w3c.github.io/ambient-light/
 caniuse: ambient-light
 group: sensors
