--- a/features/compression-streams.yml
+++ b/features/compression-streams.yml
@@ -1,5 +1,5 @@
 name: Compression streams
-description: The `CompressionStream` and `DecompressionStream` interfaces compress and decompress data using the gzip or deflate formats.
+description: The `CompressionStream` and `DecompressionStream` APIs compress and decompress data using the gzip or deflate formats.
 spec: https://compression.spec.whatwg.org/
 status:
   compute_from:
