Use more precise spec link for SW notifications feature

--- a/features/notifications-apps.yml
+++ b/features/notifications-apps.yml
@@ -5,7 +5,7 @@ name: Notifications from service workers and installed apps
 # See `features/notifications.yml` for the full Notifications feature, which
 # does not align with Caniuse.
 description: Notifications via service worker registration's `showNotification()` method, sent from installed web applications (for example, saved to the Home Screen on Safari for iOS), show a message to the user, typically using the notification system of the host operating system.
-spec: https://notifications.spec.whatwg.org/
+spec: https://notifications.spec.whatwg.org/#service-worker-api
 caniuse: notifications
 status:
   baseline: low
