--- a/features/resource-timing.yml
+++ b/features/resource-timing.yml
@@ -6,6 +6,9 @@ caniuse: resource-timing
 status:
   compute_from: api.PerformanceResourceTiming
 compat_features:
+  - api.Performance.clearResourceTimings
+  - api.Performance.resourcetimingbufferfull_event
+  - api.Performance.setResourceTimingBufferSize
   - api.PerformanceResourceTiming
   - api.PerformanceResourceTiming.connectEnd
   - api.PerformanceResourceTiming.connectStart
