Pin the SpeechRecognition API to its constructor

--- a/features/speech-recognition.yml
+++ b/features/speech-recognition.yml
@@ -3,6 +3,8 @@ description: The `SpeechRecognition` API converts audio into text using the devi
 spec: https://webaudio.github.io/web-speech-api/#speechreco-section
 group: speech
 caniuse: speech-recognition
+status:
+  compute_from: api.SpeechRecognition.SpeechRecognition
 compat_features:
   - api.SpeechRecognition
   - api.SpeechRecognition.SpeechRecognition
