Move TextEncoderStream/TextDecoderStream to the right feature
They belong with the rest of the API. They were probably included in the
stream feature because they're defined on this mixin:
https://streams.spec.whatwg.org/#generictransformstream

--- a/features/text-encoding.yml
+++ b/features/text-encoding.yml
@@ -20,6 +20,8 @@ compat_features:
   - api.TextDecoderStream.encoding
   - api.TextDecoderStream.fatal
   - api.TextDecoderStream.ignoreBOM
+  - api.TextDecoderStream.readable
+  - api.TextDecoderStream.writable
   - api.TextEncoder
   - api.TextEncoder.TextEncoder
   - api.TextEncoder.encode
@@ -29,3 +31,5 @@ compat_features:
   - api.TextEncoderStream
   - api.TextEncoderStream.TextEncoderStream
   - api.TextEncoderStream.encoding
+  - api.TextEncoderStream.readable
+  - api.TextEncoderStream.writable
