--- a/features/text-encoding.yml.dist
+++ b/features/text-encoding.yml.dist
@@ -116,6 +116,10 @@ compat_features:
   - api.TextDecoderStream.encoding
   - api.TextDecoderStream.fatal
   - api.TextDecoderStream.ignoreBOM
+  - api.TextDecoderStream.readable
+  - api.TextDecoderStream.writable
   - api.TextEncoderStream
   - api.TextEncoderStream.TextEncoderStream
   - api.TextEncoderStream.encoding
+  - api.TextEncoderStream.readable
+  - api.TextEncoderStream.writable
