--- a/features/move-before.yml.dist
+++ b/features/move-before.yml.dist
@@ -8,6 +8,7 @@ status:
     chrome_android: "133"
     edge: "133"
 compat_features:
+  - api.CustomElementRegistry.define.connectedMoveCallback_lifecycle_callback
   - api.Document.moveBefore
   - api.DocumentFragment.moveBefore
   - api.Element.moveBefore
