--- a/features/video.yml.dist
+++ b/features/video.yml.dist
@@ -377,6 +377,16 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "75"
+  #   chrome_android: "75"
+  #   edge: "79"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - api.HTMLVideoElement.playsInline
+  - html.elements.video.playsinline
+
+  # baseline: false
+  # support:
   #   safari: "3.1"
   #   safari_ios: "3"
   - api.HTMLMediaElement.playbackRate
